# api/openapi.yaml
@@ -423,6 +423,8 @@ components:
         - _index
         - _id
         - _version
+        - _seq_no
+        - _primary_term
         - result
       properties:
         _index:
@@ -430,6 +432,12 @@ components:
         _id:
           type: string
         _version:
+          type: integer
+          format: int64
+        _seq_no:
+          type: integer
+          format: int64
+        _primary_term:
           type: integer
           format: int64
         result:
@@ -441,6 +449,8 @@ components:
         - _index
         - _id
         - _version
+        - _seq_no
+        - _primary_term
         - found
       properties:
         _index:
@@ -448,6 +458,12 @@ components:
         _id:
           type: string
         _version:
+          type: integer
+          format: int64
+        _seq_no:
+          type: integer
+          format: int64
+        _primary_term:
           type: integer
           format: int64
         found:
@@ -462,6 +478,8 @@ components:
         - _index
         - _id
         - _version
+        - _seq_no
+        - _primary_term
         - result
       properties:
         _index:
@@ -469,6 +487,12 @@ components:
         _id:
           type: string
         _version:
+          type: integer
+          format: int64
+        _seq_no:
+          type: integer
+          format: int64
+        _primary_term:
           type: integer
           format: int64
         result:
@@ -567,6 +591,8 @@ components:
         - _index
         - _id
         - _version
+        - _seq_no
+        - _primary_term
         - status
       properties:
         _index:
@@ -574,6 +600,12 @@ components:
         _id:
           type: string
         _version:
+          type: integer
+          format: int64
+        _seq_no:
+          type: integer
+          format: int64
+        _primary_term:
           type: integer
           format: int64
         status:
